[package]
name    = "vault_l12"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20"

[dev-dependencies]
soroban-sdk = { version = "20", features = ["testutils"] }

[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = 0
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true
